# GitWatchSvc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: DirDiff.h  GitWatch.h  GitWatchError.h  GitWatchSvc.h  GitWatchSvcHelper.h  GitWatchUtil.h  MemoryLeaks.h  logger.h  resource.h
resource/: Resource.aps  Resource.coff  Resource.rc
src/: DirDiff.cc  DirTest.bat  DirTest.cc  GitWatch.cc  GitWatch2.cc  GitWatchGui.cc  GitWatchSvc.cc  GitWatchSvcEntry.cc  GitWatchSvcHelper.cc  GitWatchUtil.cc  Logger.cc  MemoryLeaks.cc  getargs.c
test/: script1.sh  script2.sh
